JumpScript/tests/baselines/reference/incrementAndDecrement.errors.txt
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(5,9): error TS2304: Cannot find name 'window'.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(8,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(11,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(14,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(17,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(24,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(24,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(25,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(25,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(26,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(26,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(27,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(27,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(34,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(34,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(35,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(35,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(36,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(36,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(37,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(37,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(44,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(44,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(45,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(45,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(46,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(46,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(47,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(47,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(55,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(55,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(56,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(56,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(57,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(57,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(58,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.jump(58,6): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/operators/incrementAndDecrement.jump (37 errors) ====
    enum E { A, B, C };
    var x = 4;
    var e = E.B;
    var a: any;
    var w = window;
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    
    // Assign to expression++
    x++ = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to expression--
    x-- = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to++expression
    ++x = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to--expression
    --x = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Pre and postfix++ on number
    x++;
    x--;
    ++x;
    --x;
    ++x++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --x--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++x--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --x++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    // Pre and postfix++ on enum
    e++;
    e--;
    ++e;
    --e;
    ++e++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --e--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++e--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --e++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    // Pre and postfix++ on value of type 'any'
    a++;
    a--;
    ++a;
    --a;
    ++a++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --a--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++a--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --a++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    
    // Pre and postfix++ on other types
    w++; // Error
    w--; // Error
    ++w; // Error
    --w; // Error
    ++w++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --w--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++w--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --w++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    
    